--- a/src/styles/preloader.css
+++ b/src/styles/preloader.css
@@ -1,10 +1,10 @@
 .preloader {
     position: fixed;
-    top: 0;
-    left: 0;
+    inset: 0;
     width: 100%;
-    height: 100dvh;
-    min-height: -webkit-fill-available;
+    height: 100%;
+    min-height: 100vh;
+    min-height: 100dvh;
     background-color: var(--bg-main);
     display: flex;
     align-items: center;
